#### 1.9.X - September 2010 (Revision #)
NEW FEATURES
IMPROVEMENTS
   * More accurate Bayesian estimation of background
   * Use a better evaluation of peak positions for indexing
   * Better CIF import
BUG FIXES
   * Prevent running Le Bail/profile fitting in the absence of
   a crystalline phase

#### 1.9.0.2 - January 2010 (Revision #1215)
BUG FIXES
   * Fix display of imported (e.g. .grd) Fourier maps

#### 1.9.0.1 - November 2009 (Revision #1204)
NEW FEATURES
   * Add automatic least-squares refinement of the structure during
   a global optimization run
   * Take into account rigid groups during least-squares refinement
   * Working triclinic indexing
   * Allow manual adding of peaks for indexing without a peak search
   * Add manual least-squares refinement of the structure in the 
   global optimization run/stop menu
   * Better import of CIF files, using either the Hall symbol
   or the symmetry_equiv_pos_as_xyz fields to avoid 
   ambiguous space group
   * Enable auto-generation of powder patterns from a CIF file
   for both X-ray and neutron radiation
   * When importing powder pattern CIF files, recognize both
   _pd_proc_2theta_range_XXX and _pd_meas_2theta_range_XXX

BUG FIXES
   * Avoid deadlock (freezing fox) when using the 3D crystal view or
   the powder pattern graph
   * Correct molecule rotation quaternion when using least squares
   * Correct log(likelihood) calculation using integrated intensities
   (could cause invalid Chi^2 values when used without gui)
   * Correct Fullprof export when 3 or more independent atoms are
   overlapping
   * Work around visual c++ compilation bug during Fullprof export,
   that would output U U U instead of U V  W parameters
   * Updated cctbx (and boost) version - fixes compilation with gcc 4.4
   * Enable importing Fenske-Hall zmatrices file both for human-written
   files (with whitespace between fields), and for strictly formatted
   files (sometimes without any space between fields)